# nba

./: .gitignore  CONTRACT.md  CONTRACT_STINTS.md  DAEMON_BRIEF.md  DESIGN_FICTION.md  Makefile  OVERSEER_BRIEF.md  README.md  SPEC.md  WEB_GUI_SHARED_CONTEXT.md  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl  metadata.json
.brutus/nba-1ab/: CONTRACT.md  VERDICT.md  transcript.md
.brutus/nba-24o/: CONTRACT.md  transcript.md
.brutus/nba-2fz/: CONTRACT.md  transcript.md
.brutus/nba-3fv/: VERDICT.md  transcript.md
.brutus/nba-5ve/: VERDICT.md  transcript.md
.brutus/nba-6gz/: VERDICT.md  transcript.md
.brutus/nba-bbq/: VERDICT.md  transcript.md
docs/: event_types.md  ingest_plan.md  ml_plan.md  p0_espn_coverage.md  predictor_v0_eval.md  reddit_access_2026.md  schema.md  sft_corpus.md  stints_cli_seam.md  stints_plan.md  stints_validation.md
migrations/: 0001_init.sql  0002_pbp_status.sql
nba/: __main__.py  config.py  contracts.py
nba/sim/: run.py  (+5 more)
scripts/: eval_predictor_v0.py
tests/: conftest.py  test_cli_contract.py  test_cli_live.py  test_embeddings_smoke.py  test_human.py  test_infra_daemon.py  test_ingest_contract.py  test_ingest_espn.py  test_ingest_live.py  test_ingest_parse.py  test_ingest_smoke.py  test_stints.py  test_stints_cli_contract.py  test_stints_drivers.py  test_stints_persist.py  test_stints_translate.py  test_teamspec.py  test_train_run.py  test_typed_errors_contract.py  test_web_core_default_preset.py  test_web_pages_default_season.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+94 files in other folders)
